# humanoid-rl-deploy-ros2

./: .gitmodules  README.md  README_cn.md
src/humanoid-rl-deploy-ros2/robot_controllers/: CMakeLists.txt  robot_controllers_plugin.xml
src/humanoid-rl-deploy-ros2/robot_controllers/config/: robot_controllers.yaml
src/humanoid-rl-deploy-ros2/robot_controllers/config/HU_D03_03/damping/: params.yaml
src/humanoid-rl-deploy-ros2/robot_controllers/config/HU_D03_03/mimic/policy/: lin_encoder.onnx
src/humanoid-rl-deploy-ros2/robot_controllers/config/HU_D03_03/stand/: params.yaml
src/humanoid-rl-deploy-ros2/robot_controllers/config/HU_D04_01/mimic/: params.yaml
src/humanoid-rl-deploy-ros2/robot_controllers/config/HU_D04_01/mimic/policy/: policy.onnx  priv_encoder.onnx
src/humanoid-rl-deploy-ros2/robot_controllers/include/robot_controllers/: ControllerBase.h  DampingHumanoidController.h  MimicHumanoidController.h  StandHumanoidController.h
src/humanoid-rl-deploy-ros2/robot_controllers/src/: ControllerBase.cpp  DampingHumanoidController.cpp  MimicHumanoidController.cpp  StandHumanoidController.cpp
src/humanoid-rl-deploy-ros2/robot_hw/: CMakeLists.txt
src/humanoid-rl-deploy-ros2/robot_hw/config/: robot_hw.yaml
src/humanoid-rl-deploy-ros2/robot_hw/include/robot_hw/: HardwareBase.h  HardwareLoop.h  HumanoidHardware.h  RobotData.h
src/humanoid-rl-deploy-ros2/robot_hw/launch/: humanoid_hw.launch.py  humanoid_hw_sim.launch.py
src/humanoid-rl-deploy-ros2/robot_hw/src/: HardwareBase.cpp  HardwareLoop.cpp  HumanoidHardware.cpp  HumanoidHardwareNode.cpp
